<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/converter_suhu"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@android:color/holo_orange_dark" />
    <TextView
        android:text="@string/celcius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/background_dark" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:id="@+id/edtxt_celcius"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:hint="@string/masukkan_celcius" />
    <Button
        android:text="@string/convert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_konvert"
        android:onClick="konversisuhu"
        android:layout_above="@+id/edtxt_kelvin"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignEnd="@+id/textView6"
        android:textStyle="normal|bold"
        android:textAlignment="center" />
    <TextView
        android:text="@string/kelvin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="82dp"
        android:id="@+id/textView3"
        android:textColor="@android:color/black" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtxt_kelvin"
        android:hint="@string/hasil_dalam_kelvin"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/edtxt_celcius"
        android:layout_alignStart="@+id/edtxt_celcius"
        android:textSize="14sp"
        android:textStyle="normal|bold" />
    <TextView
        android:text="@string/farenheit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textColor="@android:color/black"
        android:layout_alignBaseline="@+id/edtxt_farenheit"
        android:layout_alignBottom="@+id/edtxt_farenheit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtxt_farenheit"
        android:hint="@string/hasil_dalam_farenheit"
        android:layout_below="@+id/edtxt_kelvin"
        android:layout_alignLeft="@+id/edtxt_kelvin"
        android:layout_alignStart="@+id/edtxt_kelvin"
        android:textSize="14sp"
        android:textStyle="normal|bold" />
    <TextView
        android:text="@string/reamur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/textView5"
        android:layout_below="@+id/edtxt_farenheit"
        android:textColor="@android:color/black" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtxt_reamur"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/edtxt_farenheit"
        android:layout_alignStart="@+id/edtxt_farenheit"
        android:hint="@string/hasil_dalam_reamur"
        android:textSize="14sp"
        android:textStyle="normal|bold" />
    <Button
        android:text="@string/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_exit"
        android:onClick="keluar"
        android:layout_below="@+id/edtxt_reamur"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignEnd="@+id/textView6"
        android:layout_marginTop="10dp"
        android:textStyle="normal|bold" />

</RelativeLayout>